<resources>
    <string name="app_name">Quotes</string>

    <string name="home">Home</string>
    <string name="popular">Popular</string>
    <string name="latest">Latest</string>
    <string name="saved">Saved</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="genre">Quotes Genre</string>
    <string name="suggest">Image Status</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="rateus">Rate Us</string>
    <string name="aboutus">About Us</string>
    <string name="shareUs">Share Us</string>
    <string name="RemoveItem">Removed</string>
    <string name="ShareItem">Shareable</string>
    <string name="itemCopy">Copied</string>
</resources>