<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item

        android:id="@+id/facebook"
        android:icon="@drawable/facebook"
        android:title="@string/facebook"
        />
    <item
        android:id="@+id/insta"
        android:icon="@drawable/instagram"
        android:title="@string/instagram" />
    <item
        android:id="@+id/whatsApp"
        android:icon="@drawable/whatsapp"
        android:title="@string/whatsapp" />
    
    <item android:title="@string/rateus"
        android:id="@+id/rateUs"
      android:icon="@drawable/starfull"
        />
    <item android:title="@string/aboutus"
        android:id="@+id/aboutUs"
      android:icon="@drawable/users"
        />
</menu>
